--- a/Get-lucky.html
+++ b/Get-lucky.html
@@ -174,7 +174,7 @@
         <img id="cookieFrame" alt="Tap to crack the fortune cookie" />
       </div>
       <div class="caption">
-        Pop that fortune cookie to reveal your sexy fortune and start dating
+        Tap that fortune cookie to reveal your sexy fortune and start dating
       </div>
     </div>
   </div>
