--- a/Get-lucky.html
+++ b/Get-lucky.html
@@ -52,10 +52,11 @@
   .pulse{ animation:pulse 1.25s ease-in-out infinite; transform-origin:center; display:inline-block; }
   @keyframes pulse{ 0%,100%{transform:scale(1)} 50%{transform:scale(1.06)} }
 
+  /* Cookie + caption block */
   .stageBlock{
     display:grid;
     justify-items:center;
-    gap:6px;
+    gap:0;                         /* <-- no gap so caption hugs the image */
     margin:0 auto;
     width:min(560px,88vw);
   }
@@ -65,24 +66,22 @@
     width:100%;
     aspect-ratio:1/1;
     display:flex;
-    justify-content:center;
-    align-items:center;
+    justify-content:center;        /* center horizontally */
+    align-items:center;            /* center vertically */
     border-radius:10px;
     cursor:pointer;
     background:transparent;
   }
+
+  /* Cookie image: perfectly centered, no animation */
   .stage img{
     max-width:100%;
     height:auto;
-    transform: translateY(0);
-    animation:idleBob 3.5s ease-in-out infinite;
+    transform:none;                /* no nudge */
     filter:drop-shadow(0 6px 18px rgba(0,0,0,.25));
   }
-  @keyframes idleBob {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-4px); }
-  }
 
+  /* Caption sits directly under the cookie */
   .caption{
     color:var(--gold);
     font-style:italic;
@@ -91,7 +90,7 @@
     line-height:1.3;
     text-align:center;
     max-width:90%;
-    margin:0;
+    margin:4px auto 0;             /* <-- tight to the image */
   }
 
   .overlay{
@@ -120,13 +119,8 @@
     animation:slideUp 0.6s ease forwards;
     transform:translateY(40px);
   }
-  @keyframes slideUp {
-    to { transform:translateY(0); }
-  }
-  @keyframes fadeIn {
-    from { opacity:0; }
-    to { opacity:1; }
-  }
+  @keyframes slideUp { to { transform:translateY(0); } }
+  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
   .fortune{
     color:var(--text-blue);
@@ -148,9 +142,7 @@
     animation:btnPulse 1.6s ease-in-out infinite;
     transform-origin:center;
   }
-  .btn:hover{
-    animation:btnPulseFast 0.9s ease-in-out infinite;
-  }
+  .btn:hover{ animation:btnPulseFast 0.9s ease-in-out infinite; }
   @keyframes btnPulse {
     0%, 100% { transform: scale(1); box-shadow:0 0 0 rgba(225,191,120,0); }
     50% { transform: scale(1.08); box-shadow:0 0 20px rgba(225,191,120,0.7); }
@@ -224,11 +216,12 @@
   const fortuneEl = document.getElementById("fortuneText");
   const closeBtn  = document.getElementById("closeFortune");
 
-  // Preload images
+  // Preload frames & show first frame when ready
   const cache = []; let loaded = 0;
   imgs.forEach(src => {
     const im = new Image();
     im.onload = () => { if (++loaded === imgs.length) frameEl.src = imgs[0]; };
+    im.onerror = () => { console.warn("Image failed to load:", src); };
     im.src = src;
     cache.push(im);
   });
@@ -239,7 +232,6 @@
   function startOnce(){
     if (playing) return;
     playing = true; i = 0;
-    frameEl.style.animation = "none"; // stop idle bob
     timer = setInterval(() => {
       i++;
       if (i < imgs.length) frameEl.src = imgs[i];
@@ -260,6 +252,10 @@
   });
 
   stageEl.addEventListener("click", startOnce);
+  stageEl.tabIndex = 0;
+  stageEl.addEventListener("keydown", (e) => {
+    if (e.key === "Enter" || e.key === " ") { e.preventDefault(); startOnce(); }
+  });
 })();
 </script>
 </body>
