--- a/Get-lucky.html
+++ b/Get-lucky.html
@@ -164,7 +164,7 @@
         <img id="cookieFrame" alt="Tap to crack the fortune cookie" />
       </div>
       <div class="caption">
-        Tap that fortune cookie to reveal your sexy fortune and start dating
+        Tap the fortune cookie to reveal your sexy fortune and start dating now
       </div>
     </div>
   </div>
