--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -170,6 +170,7 @@
 
     <div class="buttons">
       <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">Play at a Le Libido Venue</button>
+      <button class="button" onclick="window.location.href='https://lelibido.com/quiz-new.html'">Date on the go</button>
       <button class="button" onclick="window.location.href='https://lelibido.com/archetype-gallery.html'">Just curious? Explore the Sexual Profiles</button>
     </div>
 
