--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -594,9 +594,9 @@
         : name.toLowerCase().replace(/[^a-z0-9]+/g, "_");
 
     const slug = formatSlug(stored);
-    alert("Profile saved! Redirecting to your full profile...");
+    alert("Profile saved! Click Close to start dating!");
 
-    window.location.href = `/premium/erotic-blueprint_${slug}.html`;
+    window.location.href = https://lelibido.com/get-lucky.html;
   }
 </script>
 <script type="module">
