--- a/Profile-anonymous.html
+++ b/Profile-anonymous.html
@@ -536,8 +536,8 @@
         : name.toLowerCase().replace(/[^a-z0-9]+/g, "_");
 
     const slug = formatSlug(stored);
-    alert("Profile saved! Redirecting to your full profile...");
-    window.location.href = `/premium/erotic-blueprint_${slug}.html`;
+    alert("Profile saved! Click Close to start dating");
+    window.location.href = 'https://lelibido.com/get-lucky.html';
   }
 </script>
 
