--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -596,7 +596,7 @@
     const slug = formatSlug(stored);
     alert("Profile saved! Click Close to start dating!");
 
-    window.location.href = https://lelibido.com/get-lucky.html;
+    window.location.href = 'https://lelibido.com/get-lucky.html';
   }
 </script>
 <script type="module">
