--- a/secret-invite.html
+++ b/secret-invite.html
@@ -39,7 +39,7 @@
   /* Doors */
   .doors{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:24px;align-items:end;max-width:1080px;margin:20px auto 0}
   .door{display:flex;flex-direction:column;align-items:center;gap:10px}
-  .door-caption{font-size:16px;font-weight:700;margin:2px 0 6px 0;letter-spacing:.2px;text-transform:none}
+  .door-caption{font-size:16px;font-weight:700;margin:2px 0 6px 0;letter-spacing:.2px}
   .caption-blue{color:var(--blue)}
   .caption-green{color:var(--green)}
   .caption-red{color:var(--red)}
@@ -100,7 +100,7 @@
       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
            stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
         <circle cx="12" cy="12" r="3"></circle>
-        <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 1 1-4 0v-.09a1.65 1.65 0 0 0-1-1.51 1.65 1.65 0 0 0-1.82.33l-.06.06A2 2 0 1 1 4.2 19.4l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 1 1 0-4h.09a1.65 1.65 0 0 0 1.51-1 1.65 1.65 0 0 0-.33-1.82l-.06-.06A2 2 0 1 1 4.2 4.2l.06.06a1.65 1.65 0 0 0 1.82.33h0A1.65 1.65 0 0 0 7.59 3.1L7.6 3A2 2 0 1 1 11.6 3v.09c0 .65.39 1.24 1 1.51h0a1.65 1.65 0 0 0 1.82-.33l.06-.06A2 2 0 1 1 19.8 4.2l-.06.06a1.65 1.65 0 0 0-.33 1.82v0c.27.61.86 1 1.51 1H21a2 2 0 1 1 0 4h-.09c-.65 0-1.24.39-1.51 1Z"/>
+        <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 1 1-4 0v-.09a1.65 1.65 0 0 0-1-1.51 1.65 1.65 0 0 0-1.82.33l-.06.06A2 2 0 1 1 4.2 19.4l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 1 1 0-4h.09c-.65 0-1.24.39-1.51 1Z"/>
       </svg>
     </button>
     <nav class="menu" id="gearMenu" role="menu" aria-label="Settings">
@@ -118,7 +118,7 @@
   <section class="doors">
     <!-- BLUE -->
     <div class="door" data-color="blue">
-      <div class="door-caption caption-blue">For the Romantic</div>
+      <div class="door-caption caption-blue">for the romantic</div>
       <button class="door-btn" id="door-blue" aria-label="Blue room door">
         <img id="door-blue-img" alt="Blue door" src="" />
       </button>
@@ -128,7 +128,7 @@
 
     <!-- GREEN -->
     <div class="door" data-color="green">
-      <div class="door-caption caption-green">For the Frisky</div>
+      <div class="door-caption caption-green">for the frisky</div>
       <button class="door-btn" id="door-green" aria-label="Green room door">
         <img id="door-green-img" alt="Green door" src="" />
       </button>
@@ -138,7 +138,7 @@
 
     <!-- RED -->
     <div class="door" data-color="red">
-      <div class="door-caption caption-red">For the Kinky</div>
+      <div class="door-caption caption-red">for the kinky</div>
       <button class="door-btn" id="door-red" aria-label="Red room door">
         <img id="door-red-img" alt="Red door" src="" />
       </button>
@@ -161,7 +161,8 @@
 
 <script>
 /* ===========================
-   Profile Mode: ensure it's set (or infer/redirect)
+   Profile Mode: infer if missing (NO redirect to signin)
+   - If not set, default to "anonymous" and stay on this page.
 =========================== */
 (function ensureProfileMode(){
   let mode = (localStorage.getItem("profileMode") || "").toLowerCase();
@@ -178,11 +179,10 @@
         const a = JSON.parse(aRaw||"{}");
         mode = (v.updatedAt||0) >= (a.updatedAt||0) ? "verified" : "anonymous";
       }catch(e){ mode = "anonymous"; }
+    } else {
+      mode = "anonymous"; // default if nothing saved
     }
-    if(mode) localStorage.setItem("profileMode", mode);
-  }
-  if(!mode){
-    window.location.replace("/Signin.html");
+    localStorage.setItem("profileMode", mode);
   }
 })();
 
@@ -191,11 +191,7 @@
 =========================== */
 const AREAS = [
   { id:"central-nj", label:"Central New Jersey" },
-  // { id:"north-nj", label:"North New Jersey" },
-  // { id:"manhattan", label:"Manhattan" },
-  // { id:"brooklyn", label:"Brooklyn" },
-  // { id:"miami", label:"Miami" },
-  // { id:"los-angeles", label:"Los Angeles" },
+  // add more areas later
 ];
 
 const VENUES_BY_AREA = {
@@ -357,7 +353,7 @@ function playDoorAnimation(color){
   });
 }
 
-/* Locked feedback: shake + (if supported) device vibration */
+/* Locked feedback: shake + (if supported) device vibration) */
 function lockedEffect(btnEl){
   btnEl.classList.remove("shake"); void btnEl.offsetWidth; btnEl.classList.add("shake");
   if(navigator.vibrate){ try{ navigator.vibrate(100) }catch(e){} }
@@ -476,7 +472,7 @@ doorBtn.green.addEventListener("click", ()=>onDoorClick("green"));
 doorBtn.red.addEventListener("click", ()=>onDoorClick("red"));
 
 /* ===========================
-   Gear menu → Profile routing
+   Gear menu → Profile routing (NO signin fallback)
 =========================== */
 const gearBtn=document.getElementById("gearBtn");
 const gearMenu=document.getElementById("gearMenu");
@@ -486,11 +482,10 @@ gearBtn.addEventListener("click",(e)=>{ e.stopPropagation(); gearMenu.classList.
 document.addEventListener("click",()=>gearMenu.classList.remove("show"));
 
 profileBtn.addEventListener("click", ()=>{
-  const mode=(localStorage.getItem("profileMode")||"").toLowerCase();
+  const mode=(localStorage.getItem("profileMode")||"anonymous").toLowerCase();
   track("menu_profile_click",{mode});
-  if(mode==="verified"){ window.location.href="/Profile-verified.html" }
-  else if(mode==="anonymous"){ window.location.href="/Profile-anonymous.html" }
-  else{ window.location.href="/Signin.html" }
+  if(mode==="verified"){ window.location.href="Profile-verified.html" }
+  else { window.location.href="Profile-anonymous.html" }
 });
 
 /* ===========================
