--- a/Profile-verified.html
+++ b/Profile-verified.html
@@ -700,7 +700,7 @@
           createdAt: Date.now()
         };
 
-        await window.LibidoBackend.saveProfileToFirestore("verified", data);
+        await window.le-libido-backend.saveProfileToFirestore("verified", data);
 
         alert("Profile saved! Click Close to start dating!");
         window.location.href = '/secret-invite.html';
